# dns-tool

./: .gitignore  .gitleaks.toml  .semgrepignore  .sonarcloud.properties  .zenodo.json  AUTHORITIES.md  BUILD.md  CITATION.cff  CITATIONS.md  COMMANDS.md  CONTRIBUTING.md  DOCS.md  DOD.md  DRIFT_ENGINE.md  FILELIST.md  INTELLIGENCE_ENGINE.md  INTEL_METHODOLOGY.md  LICENSE  LICENSING.md  MASTER_COPY.md  Makefile  NOTICE  README.md  ROADMAP.md  STUB_AUDIT.md  TOOLS.md  ZENODO_TRIGGER.txt  build.sh  checksums.txt  codemeta.json  dnstool.py  go.mod  go.sum  ip-audit-log.md  ip-audit-report.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  (+3 more)
.github/: dependabot.yml
ai_surface/: http.go  llms_txt.go  poisoning.go  robots_txt.go  scanner.go
commands/: commands.go  manifest.go  manifest_test.go
dns-eval/: run.sh
docs/: ACIP.md  ARCHITECTURE_CLASSIFIED.md  BLACK-SITE-INTERROGATIONS.md  BOUNDARY_MANIFEST.md  BOUNDARY_MATRIX.md  BUILD_TAG_STRATEGY.md  COMMUNICATION_STANDARDS.md  CONVENTIONS.md  CRITICAL_PAGES.md  EVOLUTION_APPEND_20260302.md  EVOLUTION_APPEND_20260303.md  EVOLUTION_APPEND_20260307.md  FEATURE_INVENTORY.md  FOUNDERS_MANIFESTO.md  INTELLIGENCE_ENGINE.md  MISSION.md  SINGLE_REPO_MIGRATION.md  STACK.md  TESTING.md  advanced.md  changelog.md  communication-standards.html  community-signals-inventory.md  dns-tool-methodology.html  dns-tool-methodology.md  dns-tool-reference-note.md  faq.md  founders-manifesto.html  index.md  installation-and-setup.md  llms-full.txt  llms.txt  mkdocs.yml  pdf-base.css  (+8 more)
docs-site/: mkdocs.yml
(+834 files in other folders)
